[DEV-4686] Prevent completely empty paragraph from collapsing

--- a/src/elements/Paragraph/Paragraph.scss
+++ b/src/elements/Paragraph/Paragraph.scss
@@ -7,3 +7,7 @@
     font-size: $font-size-m;
     line-height: $line-height;
 }
+
+.prezly-slate-paragraph:empty::before {
+    content: '\00a0'; // prevent completely empty paragraph from collapsing
+}
